kubernetes_project/web_app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-learning-app-ingress
  namespace: learning-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Add your ingress controller specific annotations here
spec:
  ingressClassName: nginx  # Change this based on your ingress controller
  rules:
  - host: kubernetes-learning-app.local  # Change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-learning-app-service
            port:
              number: 80
---
# Alternative: LoadBalancer Service (if you don't have an ingress controller)
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-learning-app-loadbalancer
  namespace: learning-app
  labels:
    app: kubernetes-learning-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: kubernetes-learning-app
